Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4529

Assertion `tmp->state == 4' fails on mix of INSTALL SONAME / UNINSTALL PLUGIN

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Minor
    • Resolution: Fixed
    • 5.5.30
    • 5.5.32
    • None
    • None

    Description

      Version: '5.5.31-MariaDB-valgrind-max-debug-log'  socket: '/data/repo/bzr/5.5/mysql-test/var/tmp/mysqld.1.sock'  port: 16000  Source distribution
      mysqld: /home/elenst/bzr/5.5/sql/sql_plugin.cc:2037: bool finalize_install(THD*, TABLE*, const LEX_STRING*): Assertion `tmp->state == 4' failed.
      130514 20:23:13 [ERROR] mysqld got signal 6 ;

      #6  0x00007f5896acc0ee in __assert_fail_base (fmt=<optimized out>, assertion=0xd6eed4 "tmp->state == 4", file=0xd6e660 "/home/elenst/bzr/5.5/sql/sql_plugin.cc", line=<optimized out>, function=<optimized out>) at assert.c:94
      #7  0x00007f5896acc192 in __GI___assert_fail (assertion=0xd6eed4 "tmp->state == 4", file=0xd6e660 "/home/elenst/bzr/5.5/sql/sql_plugin.cc", line=2037, function=0xd6f8e0 "bool finalize_install(THD*, TABLE*, const LEX_STRING*)") at assert.c:103
      #8  0x0000000000627763 in finalize_install (thd=0x3876670, table=0x7f5878013410, name=0x7f5887d47420) at /home/elenst/bzr/5.5/sql/sql_plugin.cc:2037
      #9  0x0000000000627cca in mysql_install_plugin (thd=0x3876670, name=0x3879870, dl_arg=0x3879880) at /home/elenst/bzr/5.5/sql/sql_plugin.cc:2145
      #10 0x00000000006195c7 in mysql_execute_command (thd=0x3876670) at /home/elenst/bzr/5.5/sql/sql_parse.cc:4383
      #11 0x000000000061ccac in mysql_parse (thd=0x3876670, rawbuf=0x7f5878057a68 "install soname 'ha_example.so'", length=30, parser_state=0x7f5887d484f0) at /home/elenst/bzr/5.5/sql/sql_parse.cc:5760
      #12 0x0000000000610392 in dispatch_command (command=COM_QUERY, thd=0x3876670, packet=0x3918411 "install soname 'ha_example.so'", packet_length=30) at /home/elenst/bzr/5.5/sql/sql_parse.cc:1068
      #13 0x000000000060f5d3 in do_command (thd=0x3876670) at /home/elenst/bzr/5.5/sql/sql_parse.cc:794
      #14 0x000000000071b1fb in do_handle_one_connection (thd_arg=0x3876670) at /home/elenst/bzr/5.5/sql/sql_connect.cc:1266
      #15 0x000000000071abe2 in handle_one_connection (arg=0x3876670) at /home/elenst/bzr/5.5/sql/sql_connect.cc:1181
      #16 0x0000000000977c3e in pfs_spawn_thread (arg=0x38d3a50) at /home/elenst/bzr/5.5/storage/perfschema/pfs.cc:1015
      #17 0x00007f589789ce9a in start_thread (arg=0x7f5887d49700) at pthread_create.c:308
      #18 0x00007f5896b90cbd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112

      bzr version-info

      revision-id: sergii@pisem.net-20130513141139-vl0ehunm2bwgx1s9
      revno: 3764
      branch-nick: 5.5

      Test case:

      install soname 'ha_example.so';
      uninstall plugin example;
      install soname 'ha_example.so';

      Also reproducible with TokuDB. With InnoDB plugin, the second install soname hangs (or maybe it just crashes so slowly that I didn't wait till the end).
      Possibly it fails with any soname that contains more than one plugin.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 20m
                20m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.